--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:hint="@string/text_input_layout_hint">
 
         <EditText
+            android:id="@+id/rssFeedEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
