--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity"
+    android:orientation="vertical">
 
+    <include
+        layout="@layout/toolbar_main"
+        android:id="@+id/toolbar"/>
+
+    <!--
     <Button
         android:id="@+id/rssFeedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:onClick="onClickFetch"
-        android:text="@string/rss_feed_btn"/>
+        android:text="@string/rss_feed_btn" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -42,20 +47,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/feedTitle"
-        android:text="@string/feed_descriptioin"/>
+        android:text="@string/feed_description" />
 
     <TextView
         android:id="@+id/feedLink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/feedDescription"
-        android:text="@string/feed_link"/>
+        android:text="@string/feed_link" /> -->
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/feedLink"
         android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <android.support.v7.widget.RecyclerView
@@ -64,4 +68,4 @@
             android:layout_height="match_parent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-</RelativeLayout>
+</LinearLayout>
