--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -38,6 +38,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_24dp"
-        android:onClick="onClickAddNewFeed"/>
+        android:onClick="onClickAddNewFeed"
+        app:layout_behavior="com.example.focusstartrssreader.UI.scrollingfabbehavior.ScrollingFABBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
