--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_add_feed"
-        android:title="@string/add_action_title"
+        android:title=""
         android:icon="@drawable/ic_add_24dp"
         android:orderInCategory="1"
         app:showAsAction="always"/>
