--- a/app/src/main/res/layout/activity_feed_detail.xml
+++ b/app/src/main/res/layout/activity_feed_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.activities.detail.FeedDetailActivity"
+    tools:context=".ui.activity.detail.FeedDetailActivity"
     android:orientation="vertical">
 
     <include
@@ -22,24 +22,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/newsDateTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="13sp"
             android:textStyle="italic" />
 
         <TextView
             android:id="@+id/newsDescriptionTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:gravity="fill"
-            android:textSize="15sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
