--- a/app/src/main/res/layout/activity_add_new_feed.xml
+++ b/app/src/main/res/layout/activity_add_new_feed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.activities.add.AddNewFeedActivity"
+    tools:context=".ui.activity.add.AddNewFeedActivity"
     android:orientation="vertical">
 
     <include
