--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/activity_settings"
-    tools:context="com.example.focusstartrssreader.UI.activities.settings.SettingsFragment">
+    tools:context="com.example.focusstartrssreader.ui.activity.settings.SettingsFragment">
 
 </LinearLayout>
