--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.activity.add.AddActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -17,14 +17,6 @@
             android:id="@+id/toolbar"/>
 
     </android.support.design.widget.AppBarLayout>
-
-    <!--
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-        -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -39,6 +31,6 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_24dp"
         android:onClick="onClickAddNewFeed"
-        app:layout_behavior="com.example.focusstartrssreader.ui.scrollingfabbehavior.ScrollingFABBehavior"/>
+        app:layout_behavior="com.example.focusstartrssreader.util.scrollingfabbehavior.ScrollingFABBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
