Added check for matching channels in the database

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -31,6 +31,6 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_24dp"
         android:onClick="onClickAddNewFeed"
-        app:layout_behavior="com.example.focusstartrssreader.util.scrollingfabbehavior.ScrollingFABBehavior"/>
+        app:layout_behavior="com.example.focusstartrssreader.util.scrolling.fab.behavior.ScrollingFABBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
